--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name":"TechCal",
     "short_name":"TechCal",
     "description":"progressive web TechCal",
-    "start_url":"/",
+    "start_url":"./",
     "background_color":"#2c3e50",
     "theme_color":"#2c3e50",
     "orientation":"portrait",
@@ -18,4 +18,5 @@
             "type":"image/png"
         }
     ]
+
 }
